samples/_failures_safe/1761214559_326c06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab3371d7.c: In function ‘main’:
./samples/SAFE/__tmp_ab3371d7.c:154:5: error: expected declaration or statement at end of input
  154 |     print_matrix(&b, "B");
      |     ^~~~~~~~~~~~
